# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_shaders.sh  vec3.h
geometry/: sphere.h
shaders/: closesthit.rchit  miss.rmiss  raygen.rgen  shadow.rahit  shadow.rmiss
src/: AccelerationStructure.cpp  AccelerationStructure.h  AssetPath.cpp  AssetPath.h  DescriptorSet.cpp  DescriptorSet.h  GUI.cpp  GUI.h  InstanceData.h  RayTracingPipeline.cpp  RayTracingPipeline.h  RayTracingScene.cpp  RayTracingScene.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  StorageImage.cpp  StorageImage.h  SwapChain.cpp  SwapChain.h  TurnTableCamera.cpp  TurnTableCamera.h  VulkanContext.cpp  VulkanContext.h  VulkanHelper.cpp  VulkanHelper.h  VulkanRT.cpp  VulkanRT.h  Window.cpp  Window.h  main.cpp  stdafx.h
src/core/: AssetPath.cpp  AssetPath.h  FramePresenter.cpp  FramePresenter.h  Renderer.h  Window.cpp  Window.h
src/geometry/: DeviceMesh.cpp  DeviceMesh.h  HostMesh.h  MeshFactory.cpp  MeshFactory.h  ObjLoader.cpp  ObjLoader.h  Vertex.cpp  Vertex.h
src/gui/: GUI.cpp  GUI.h
src/loader/: ObjLoader.cpp  ObjLoader.h
src/scene/: RayTracingRenderer.cpp  RayTracingRenderer.h  SceneContent.h  SceneGraph.cpp  SceneGraph.h  TurnTableCamera.cpp  TurnTableCamera.h
src/scene/content/: SpheresScene.cpp  SpheresScene.h  TeapotScene.cpp  TeapotScene.h
src/scenes/: SceneContent.h  SpheresScene.cpp  SpheresScene.h  TeapotScene.cpp  TeapotScene.h
src/structure/: BLAS.cpp  BLAS.h  Buffer.cpp  Buffer.h  StorageImage.cpp  StorageImage.h  TLAS.cpp  TLAS.h
src/utils/: Singleton.h
src/vulkan/: DescriptorSet.cpp  DescriptorSet.h  InstanceData.h  RayTracingPipeline.cpp  RayTracingPipeline.h  SwapChain.cpp  SwapChain.h  VulkanContext.cpp  VulkanContext.h  VulkanHelper.cpp  VulkanHelper.h  VulkanRT.cpp  VulkanRT.h
src/vulkan/resources/: BLAS.cpp  BLAS.h  Buffer.cpp  Buffer.h  StorageImage.cpp  StorageImage.h  TLAS.cpp  TLAS.h
